# ethical-smart-grid

./: .gitignore  Readme.md  main.py  make_env.py  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: docs.yml  package.yml  testing.yml
algorithms/: memory.py  model.py  utils.py
algorithms/naive/: random_model.py
algorithms/qsom/: __init__.py  experiments.py  qsom.py  qsom_agent.py  som.py
algorithms/util/: __init__.py  action_perturbator.py  action_selector.py
data/: test_profile.npz
docs/: .gitignore  Makefile  redirect_to_version.html  requirements.txt
docs/source/: adding_model.rst  api.rst  argumentation.rst  conf.py  custom_scenario.rst  index.rst  usage.rst  use_case.rst  visualizing.ipynb
joss-paper/: paper.bib  paper.md
main/: main.py  runner.py  watchers.py
notebooks/: dataset_openei.ipynb
smartgrid/: __init__.py  agent.py  environment.py  make_env.py  observations.py  world.py
smartgrid/agents/: __init__.py  agent.py  data_conversion.py
smartgrid/aggregate_function/: aggregate_function.py
smartgrid/observation/: __init__.py  base_observation.py  global_observation.py  local_observation.py  observation_manager.py  observations.py
smartgrid/rewards/: __init__.py  reward.py  reward_collection.py
smartgrid/scenarios/: __init__.py  _load_agent.py  debug.py  scenario.py  scenario_declaration.py  scenario_openei.py
smartgrid/util/: __init__.py  agent_profile.py  available_energy.py  bounded.py  comforts.py  equity.py
smartgrid/wrappers/: __init__.py  (+2 more)
tests/: test_argumentation.py  test_norms.py
(+42 files in other folders)
