[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethical-smart-grid-simulator"
version = "0.0.1"
authors = [
    { name = "Clément Scheirlinck" },
    { name = "Rémy Chaput", email = "rchaput.pro@gmail.com" }
]
description = "A RL environment for learning ethically-aligned behaviours in a Smart Grid simulator."
readme = "Readme.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/ethicsai/ethical-smart-grid"
"Bug Tracker" = "https://github.com/ethicsai/ethical-smart-grid/issues"

# Ignore some files when building with hatchling
[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]
